# deep-rts

./: .gitignore  .gitmodules  .travis.yml  AddUnit_8cpp.html  AddUnit_8h.html  AddUnit_8h_source.html  BaseGUI_8cpp.html  BaseGUI_8h.html  BaseGUI_8h_source.html  BaseState_8cpp.html  BaseState_8h.html  BaseState_8h_source.html  Blend2DGUI_8cpp.html  Blend2DGUI_8h.html  Blend2DGUI_8h_source.html  Blend2DSprites_8h.html  Blend2DSprites_8h_source.html  Building_8cpp.html  Building_8h.html  Building_8h_source.html  CMakeLists.txt  ColorConverter_8hpp.html  ColorConverter_8hpp_source.html  Combat_8cpp.html  Combat_8h.html  Combat_8h_source.html  Config.py  Config_8h.html  Config_8h_source.html  Constants_8h.html  Constants_8h_source.html  DamageDoneIncrement_8cpp.html  DamageDoneIncrement_8h.html  DamageDoneIncrement_8h_source.html  DamageDone_8cpp.html  DamageDone_8h.html  DamageDone_8h_source.html  DamageTakenIncrement_8cpp.html  DamageTakenIncrement_8h.html  DamageTakenIncrement_8h_source.html  (+419 more)
c++/: CMakeLists.txt
c++/cmake/: FindFlatbuffers.cmake  FindPython.cmake  FindSFML.cmake
c++/project/msvc15/: WarC2Sim++.vcxproj.filters
c++/src/: main.cpp
c++/src/flatbuffers/ScoreLog/: create_buffer.sh
c++/src/game/: Config.h  Constants.h  Game.cpp  Game.h
c++/src/game/action/: BaseAction.h  RightClickAction.h
c++/src/game/data/: config.json
c++/src/game/environment/: Tile.cpp  Tilemap.cpp
c++/src/game/graphics/: Animation.cpp  GUI.cpp  GUI.h  GraphicTile.cpp  GraphicTile.h  GraphicTilemap.cpp  GraphicTilemap.h
c++/src/game/loaders/: MapLoader.cpp  MapLoader.h  ResourceLoader.cpp
c++/src/game/logging/: LogGame.h  LogTick.h
c++/src/game/player/: Player.cpp  Player.h
c++/src/game/python/: Main.py  (+1 more)
cplusplus/: CMakeLists.txt
cplusplus/src/: Config.h  Constants.h  Game.cpp  Game.h  main.cpp
cplusplus/src/environment/: Map.cpp  Tile.cpp  Tilemap.cpp  Tilemap.h
cplusplus/src/gamestate/: GameState.h  StateChange.h
cplusplus/src/graphics/: GUI.h  GUIGame.cpp  PyGUI.cpp  PyGUI.h  ResourceHandler.h
cplusplus/src/loaders/: ResourceLoader.cpp
cplusplus/src/player/: Player.cpp
cplusplus/src/state/: BaseState.h  Combat.cpp  Walking.h
cplusplus/src/unit/: Unit.cpp  UnitManager.h
cplusplus/src/util/: JPS.h  matrix.cpp  pybind11_matrix.h
sources/python/: CMakeLists.txt  MANIFEST.in  requirements.txt  setup.py
sources/python/DeepRTS/: DeepRTS.py  __init__.py  _py_deeprts.py  _py_gui.py  _py_sprites.py  _py_util.py  deeprts.py  fastgui.pyx  layer.pyx  main.py  sprite_manager.pyx  test.py  util.py
sources/python/bindings/: BaseState.cpp  Config.cpp  Constants.cpp  DeepRTS.cpp  Game.cpp  Player.cpp  Tile.cpp  Tilemap.cpp  Unit.cpp  UnitManager.cpp
src/: CMakeLists.txt  Config.h  Constants.h  Game.cpp  Game.h  Map.cpp  Player.cpp  PyGUI.cpp  ResourceLoader.cpp  Tile.cpp  Tilemap.cpp  Unit.cpp  UnitManager.cpp  main.cpp
src/action/: RightClickAction.cpp
src/contrib/webclient/: README.md  angular.json  git-version.js  karma.conf.js  package-lock.json  package.json
src/contrib/webserver/: Webserver.cpp  Webserver.h  Websockets.cpp  Websockets.h
src/environment/: Map.cpp  Map.h  Tile.cpp  Tile.h  TileInfo.h  Tilemap.cpp  Tilemap.h
src/flatbuffers/: Game.fbs  Player.fbs  Unit.fbs  create_buffer.bat
src/flatbuffers/ScoreLog/: ScoreLog.fbs  ScorePlayer.fbs  create_buffer.bat  create_buffer.sh
src/game/: Config.h  Constants.h  Game.cpp  Game.h
src/game/action/: RightClickAction.cpp  RightClickAction.h
src/game/data/: config.json  dqn.prototxt
src/game/environment/: Tile.cpp  Tile.h  Tilemap.cpp  Tilemap.h
src/game/graphics/: Animation.cpp  Animation.h  GUI.cpp  GUI.h  GraphicTile.cpp  GraphicTilemap.cpp
src/game/loaders/: MapLoader.cpp  MapLoader.h  ResourceLoader.cpp
src/game/logging/: LogGame.cpp
src/game/player/: Player.cpp  Player.h
src/game/proto/: GameMessage.pb.cc  GameMessage.pb.h
src/game/python/: DQN.py  GameMessage_pb2.py  Main.py  Main_Standalone.py  PyAI.py  RemoteAI.py  TestEnvironment.py  Util.py
src/game/state/: BaseState.h  Building.cpp  Building.h  Combat.cpp  Combat.h  Dead.cpp  Dead.h  Despawned.cpp  Despawned.h  Harvesting.cpp  Harvesting.h  Idle.h  Spawning.cpp  Spawning.h  StateManager.cpp  StateManager.h  Walking.cpp  Walking.h
src/game/unit/: InventoryManager.cpp  InventoryManager.h  Peasant.cpp  TownHall.cpp  Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h
src/game/util/: ColorConverter.hpp  Pathfinder.cpp  Pathfinder.h  ScoreLogSerializer.h  SharedVector.h
src/gamestate/: AddUnit.cpp  GameState.cpp
src/graphics/: Animation.cpp  Animation.h  GUI.cpp  GUI.h  GUIGame.cpp  GUIGame.h  GraphicTile.cpp  GraphicTile.h  PyGUI.cpp  PyGUI.h
src/gui/: BaseGUI.cpp  Blend2DGUI.cpp
src/loaders/: ResourceLoader.cpp  ResourceLoader.h
src/logging/: LogGame.cpp  LogPlayer.h
src/nodejs/: main.js  package.json
src/nodejs/public_html/: index.html
src/player/: Player.cpp  Player.h
src/proto/: GameMessage.proto
src/scenario/: Scenario.cpp
src/scenario/criteria/: DamageDone.cpp  DamageDoneIncrement.cpp  DamageTaken.cpp  DamageTakenIncrement.cpp  FoodConsumption.cpp  FoodCount.cpp  GameEnd.cpp  GoldCollect.cpp  LumberCollect.cpp  NumUnitTypeCreated.cpp  ResourceIncrement.cpp  ScenarioCriteria.cpp  StoneCollect.cpp  UnitIncrement.cpp  UnitsCreated.cpp
src/scenario/scenarios/: GeneralAIOneVersusOne.cpp  GoldCollectFifteen.cpp  LavaMaze.cpp
src/server/: Server.cpp  Server.h  ServerTask.h  ServerWorker.h
src/state/: BaseState.cpp  BaseState.h  Building.cpp  Building.h  Combat.cpp  Combat.h  Dead.cpp  Dead.h  Despawned.cpp  Despawned.h  Harvesting.cpp  Harvesting.h  Idle.cpp  Idle.h  Spawning.cpp  Spawning.h  StateManager.cpp  StateManager.h  Walking.cpp  Walking.h
src/unit/: Unit.cpp  Unit.h  UnitManager.cpp  UnitManager.h
src/util/: JPS.h  Pathfinder.cpp  Random.h  String.h  matrix.cpp  matrix.h  pybind11_matrix.h
src/wrapper/: Config.cpp  Constants.cpp  DeepRTS.cpp  Game.cpp  Map.cpp  Player.cpp  Tile.cpp  Tilemap.cpp  Unit.cpp
src/wrapper/binder/: includes.h
src/wrapper/trampolines/: PyGame.h
(+912 files in other folders)
