[project]
requires-python = ">=3.8"

[build-system]
requires = [
    "setuptools>=41", 
    "wheel",
    "cmake",
    "ninja",
    "setuptools-git-versioning<2", 
    "numpy",
    "pybind11[global]"
]
build-backend = "setuptools.build_meta"

[tool.setuptools-git-versioning]
enabled = true

[tool.cibuildwheel]
build = "cp3{8,9,10,11}-musl*"
manylinux-x86_64-image = "manylinux_2_28"


[tool.cibuildwheel.macos]
archs = ["x86_64",  "arm64"] #"universal2",

repair-wheel-command = "delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}"


[tool.cibuildwheel.linux]
archs = ["x86_64"]
repair-wheel-command = "auditwheel repair -w {dest_dir} {wheel}"
